--- a/coursework/manning-data-science-bookcamp/jupyter_notebooks/parse_headlines.ipynb
+++ b/coursework/manning-data-science-bookcamp/jupyter_notebooks/parse_headlines.ipynb
@@ -170,8 +170,8 @@
     "    \n",
     "    # Drop the tricky ones\n",
     "    # A smarter algo might be able to figure out if they meant the city, but this is the less smart version for now\n",
-    "    tricky_cities = ['Of','Gap','Boom','Hit','Can','Man','Goes','Come','Bay']\n",
-    "       # Consider also dropping these: Buy, Bra, Bury, Papa\n",
+    "    tricky_cities = ['Of','Gap','Boom','Hit','Can','Man','Goes','Come','Bay','Spring','Borne','Buy',\\\n",
+    "                    'Bury','Bra','Papa']\n",
     "    \n",
     "    df_cities.drop(df_cities.loc[df_cities['tidy_name'].isin(tricky_cities)].index, inplace=True)\n",
     "    \n",
@@ -303,19 +303,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df_cities original: 24336 and final: 24327\n"
+      "df_cities original: 24336 and final: 24321\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "original_name    4901\n",
-       "geonameid        4901\n",
-       "latitude         4901\n",
-       "longitude        4901\n",
-       "countrycode      4901\n",
-       "tidy_name        4901\n",
-       "tidy_len         4901\n",
+       "original_name    4900\n",
+       "geonameid        4900\n",
+       "latitude         4900\n",
+       "longitude        4900\n",
+       "countrycode      4900\n",
+       "tidy_name        4900\n",
+       "tidy_len         4900\n",
        "dtype: int64"
       ]
      },
@@ -829,7 +829,7 @@
     {
      "data": {
       "text/plain": [
-       "(622, 3)"
+       "(620, 3)"
       ]
      },
      "execution_count": 23,
@@ -844,6 +844,27 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "609"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many headlines did we keep from the original 650?\n",
+    "df_final['headline'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +998,7 @@
        "4  Zika cases in Vietnam's Ho Chi Minh City surge                               Ho Chi Minh City      NaN   "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
