Added unidecode of names to create simple_names column

--- a/how-to/explore_geonamescache.ipynb
+++ b/how-to/explore_geonamescache.ipynb
@@ -434,17 +434,17 @@
     {
      "data": {
       "text/plain": [
-       "Washington County    30\n",
-       "Jefferson County     25\n",
-       "Franklin County      24\n",
-       "Lincoln County       23\n",
-       "Jackson County       23\n",
-       "                     ..\n",
-       "Kandiyohi County      1\n",
-       "Newberry County       1\n",
-       "Hemphill County       1\n",
-       "Sutter County         1\n",
-       "Posey County          1\n",
+       "Washington County              30\n",
+       "Jefferson County               25\n",
+       "Franklin County                24\n",
+       "Jackson County                 23\n",
+       "Lincoln County                 23\n",
+       "                               ..\n",
+       "Craven County                   1\n",
+       "Nottoway County                 1\n",
+       "St. John the Baptist Parish     1\n",
+       "Kitsap County                   1\n",
+       "Cuyahoga County                 1\n",
        "Name: name, Length: 1968, dtype: int64"
       ]
      },
@@ -806,17 +806,17 @@
     {
      "data": {
       "text/plain": [
-       "Springfield           8\n",
-       "San Pedro             7\n",
-       "Richmond              7\n",
-       "San Fernando          7\n",
-       "Mercedes              6\n",
-       "                     ..\n",
-       "‘Abasān al Kabīrah    1\n",
-       "Winejok               1\n",
-       "Shiroishi             1\n",
-       "Carmen de Viboral     1\n",
-       "Bonita Springs        1\n",
+       "Springfield                   8\n",
+       "San Fernando                  7\n",
+       "San Pedro                     7\n",
+       "Richmond                      7\n",
+       "Santa Cruz                    6\n",
+       "                             ..\n",
+       "‘Anjarah                      1\n",
+       "Bornem                        1\n",
+       "Sawāi Mādhopur                1\n",
+       "Los Palacios y Villafranca    1\n",
+       "Lędziny                       1\n",
        "Name: name, Length: 23090, dtype: int64"
       ]
      },
@@ -892,6 +892,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a column for simplified city names and write out this entire dataframe for use in other projects\n",
+    "df_cities['simple_name'] = df_cities['name'].apply(lambda x: unidecode(x))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -910,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -942,6 +952,7 @@
        "      <th>population</th>\n",
        "      <th>timezone</th>\n",
        "      <th>admin1code</th>\n",
+       "      <th>simple_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -955,6 +966,7 @@
        "      <td>20430</td>\n",
        "      <td>Europe/Andorra</td>\n",
        "      <td>07</td>\n",
+       "      <td>Andorra la Vella</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>290594</th>\n",
@@ -966,6 +978,7 @@
        "      <td>62747</td>\n",
        "      <td>Asia/Dubai</td>\n",
        "      <td>07</td>\n",
+       "      <td>Umm Al Quwain City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>291074</th>\n",
@@ -977,6 +990,7 @@
        "      <td>351943</td>\n",
        "      <td>Asia/Dubai</td>\n",
        "      <td>05</td>\n",
+       "      <td>Ras Al Khaimah City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>291580</th>\n",
@@ -988,6 +1002,7 @@
        "      <td>63482</td>\n",
        "      <td>Asia/Dubai</td>\n",
        "      <td>01</td>\n",
+       "      <td>Zayed City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>291696</th>\n",
@@ -999,6 +1014,7 @@
        "      <td>40677</td>\n",
        "      <td>Asia/Dubai</td>\n",
        "      <td>06</td>\n",
+       "      <td>Khawr Fakkan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1012,15 +1028,15 @@
        "291580     291580           Zayed City  23.6542   53.7052          AE   \n",
        "291696     291696         Khawr Fakkān  25.3313    56.342          AE   \n",
        "\n",
-       "        population        timezone admin1code  \n",
-       "3041563      20430  Europe/Andorra         07  \n",
-       "290594       62747      Asia/Dubai         07  \n",
-       "291074      351943      Asia/Dubai         05  \n",
-       "291580       63482      Asia/Dubai         01  \n",
-       "291696       40677      Asia/Dubai         06  "
+       "        population        timezone admin1code          simple_name  \n",
+       "3041563      20430  Europe/Andorra         07     Andorra la Vella  \n",
+       "290594       62747      Asia/Dubai         07   Umm Al Quwain City  \n",
+       "291074      351943      Asia/Dubai         05  Ras Al Khaimah City  \n",
+       "291580       63482      Asia/Dubai         01           Zayed City  \n",
+       "291696       40677      Asia/Dubai         06         Khawr Fakkan  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1067,7 @@
        " 'accuracyLevel': 0}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1103,7 @@
        "   'admin1code': '29'}}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1251,6 +1267,7 @@
        "      <th>population</th>\n",
        "      <th>timezone</th>\n",
        "      <th>admin1code</th>\n",
+       "      <th>simple_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1264,6 +1281,7 @@
        "      <td>15810</td>\n",
        "      <td>Europe/Brussels</td>\n",
        "      <td>VLG</td>\n",
+       "      <td>Boom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2284647</th>\n",
@@ -1275,6 +1293,7 @@
        "      <td>139341</td>\n",
        "      <td>Africa/Abidjan</td>\n",
        "      <td>78</td>\n",
+       "      <td>Man</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3016702</th>\n",
@@ -1286,6 +1305,7 @@
        "      <td>42715</td>\n",
        "      <td>Europe/Paris</td>\n",
        "      <td>93</td>\n",
+       "      <td>Gap</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2654187</th>\n",
@@ -1297,6 +1317,7 @@
        "      <td>61044</td>\n",
        "      <td>Europe/London</td>\n",
        "      <td>ENG</td>\n",
+       "      <td>Bury</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3181631</th>\n",
@@ -1308,6 +1329,7 @@
        "      <td>24072</td>\n",
        "      <td>Europe/Rome</td>\n",
        "      <td>12</td>\n",
+       "      <td>Bra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2755476</th>\n",
@@ -1319,6 +1341,7 @@
        "      <td>36931</td>\n",
        "      <td>Europe/Amsterdam</td>\n",
        "      <td>10</td>\n",
+       "      <td>Goes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2758598</th>\n",
@@ -1330,6 +1353,7 @@
        "      <td>20550</td>\n",
        "      <td>Europe/Amsterdam</td>\n",
        "      <td>15</td>\n",
+       "      <td>Borne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1725919</th>\n",
@@ -1341,6 +1365,7 @@
        "      <td>33547</td>\n",
        "      <td>Asia/Manila</td>\n",
        "      <td>40</td>\n",
+       "      <td>Bay</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>570508</th>\n",
@@ -1352,6 +1377,7 @@
        "      <td>26486</td>\n",
        "      <td>Europe/Moscow</td>\n",
        "      <td>37</td>\n",
+       "      <td>Buy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>741240</th>\n",
@@ -1363,6 +1389,7 @@
        "      <td>31951</td>\n",
        "      <td>Europe/Istanbul</td>\n",
        "      <td>61</td>\n",
+       "      <td>Of</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4733624</th>\n",
@@ -1374,6 +1401,7 @@
        "      <td>54298</td>\n",
        "      <td>America/Chicago</td>\n",
        "      <td>TX</td>\n",
+       "      <td>Spring</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1393,21 +1421,21 @@
        "741240     741240      Of  40.9406   40.2592          TR      31951   \n",
        "4733624   4733624  Spring  30.0799  -95.4172          US      54298   \n",
        "\n",
-       "                 timezone admin1code  \n",
-       "2801494   Europe/Brussels        VLG  \n",
-       "2284647    Africa/Abidjan         78  \n",
-       "3016702      Europe/Paris         93  \n",
-       "2654187     Europe/London        ENG  \n",
-       "3181631       Europe/Rome         12  \n",
-       "2755476  Europe/Amsterdam         10  \n",
-       "2758598  Europe/Amsterdam         15  \n",
-       "1725919       Asia/Manila         40  \n",
-       "570508      Europe/Moscow         37  \n",
-       "741240    Europe/Istanbul         61  \n",
-       "4733624   America/Chicago         TX  "
+       "                 timezone admin1code simple_name  \n",
+       "2801494   Europe/Brussels        VLG        Boom  \n",
+       "2284647    Africa/Abidjan         78         Man  \n",
+       "3016702      Europe/Paris         93         Gap  \n",
+       "2654187     Europe/London        ENG        Bury  \n",
+       "3181631       Europe/Rome         12         Bra  \n",
+       "2755476  Europe/Amsterdam         10        Goes  \n",
+       "2758598  Europe/Amsterdam         15       Borne  \n",
+       "1725919       Asia/Manila         40         Bay  \n",
+       "570508      Europe/Moscow         37         Buy  \n",
+       "741240    Europe/Istanbul         61          Of  \n",
+       "4733624   America/Chicago         TX      Spring  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,12 +1448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# One option is to drop all of these since they are smaller cities and these words can turn up for other reasons, \n",
     "# such as \"Spring break\" or \"mosquito-borne\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## For offline sleuthing\n",
+    "df_cities.to_csv('geonamescache_complete_cities.csv')"
    ]
   },
   {
