improved comments and readability

--- a/coursework/manning-data-science-bookcamp/jupyter_notebooks/parse_headlines.ipynb
+++ b/coursework/manning-data-science-bookcamp/jupyter_notebooks/parse_headlines.ipynb
@@ -34,12 +34,13 @@
     "\n",
     "# TODO\n",
     "#   A review of the output parsed_headlines.csv indicates that there are \n",
-    "#   quite a few cities and/or\n",
-    "#   regions that are not in geonamescache. Options: \n",
+    "#   quite a few cities and/or regions that are not in geonamescache. Options: \n",
     "#       create my own list of names to cover these\n",
     "#       help with the geonamescache project\n",
     "#   About 7 of the headlines have BOTH city and country; if we don't resolve \n",
-    "#       country names until later, remember to remove the duplicates."
+    "#       country names until later, remember to remove the duplicates.\n",
+    "#   Several cities are the same as common English words; drop them for now. Later, consider a more complex \n",
+    "#       algorithm to decide if/when to treat these as cities."
    ]
   },
   {
@@ -148,32 +149,35 @@
     "    # gc_countries = gc.get_countries()\n",
     "    gc_cities    = gc.get_cities()\n",
     "\n",
-    "    df_cities = pd.DataFrame(columns=['original_name','geonameid','latitude','longitude','countrycode'])\n",
+    "    df_cities = pd.DataFrame(columns=['original_name','geonameid','population','latitude','longitude','countrycode'])\n",
     "\n",
     "    for c in gc_cities:\n",
     "        df_cities = df_cities.append({'original_name':gc_cities[c]['name'], \\\n",
-    "                                  'geonameid':c,\\\n",
+    "                                  'geonameid':c,'population':gc_cities[c]['population'],\\\n",
     "                                  'latitude':gc_cities[c]['latitude'],\\\n",
     "                                  'longitude': gc_cities[c]['longitude'],\\\n",
     "                                  'countrycode':gc_cities[c]['countrycode']},\\\n",
     "                         ignore_index=True)\n",
+    "        \n",
+    "    ## Begin city list clean-up\n",
+    "    \n",
+    "    # 1. Simplify the names by applying unidecode to remove accents and special characters\n",
     "\n",
-    "    # Tidy up the names\n",
-    "\n",
-    "    df_cities['tidy_name'] = df_cities['original_name'].apply(lambda x: unidecode(x)) # 4904 names are affected\n",
+    "    df_cities['simple_name'] = df_cities['original_name'].apply(lambda x: unidecode(x)) # 4904 names are affected\n",
     "\n",
     "    # Sort the cities so that the longer ones come first\n",
-    "    df_cities['tidy_len'] = df_cities['tidy_name'].apply(lambda x: len(x))\n",
+    "    df_cities['tidy_len'] = df_cities['simple_name'].apply(lambda x: len(x))\n",
     "    df_cities.sort_values(by='tidy_len',ascending=False,inplace=True)\n",
     "    \n",
     "    len_original = len(df_cities)\n",
     "    \n",
-    "    # Drop the tricky ones\n",
-    "    # A smarter algo might be able to figure out if they meant the city, but this is the less smart version for now\n",
+    "    # 2. Drop the tricky ones\n",
+    "    # A smarter algorithm might be able to figure out if these were being used as city names or as\n",
+    "    # common English words, but this is the less smart version for now.\n",
     "    tricky_cities = ['Of','Gap','Boom','Hit','Can','Man','Goes','Come','Bay','Spring','Borne','Buy',\\\n",
     "                    'Bury','Bra','Papa']\n",
     "    \n",
-    "    df_cities.drop(df_cities.loc[df_cities['tidy_name'].isin(tricky_cities)].index, inplace=True)\n",
+    "    df_cities.drop(df_cities.loc[df_cities['simple_name'].isin(tricky_cities)].index, inplace=True)  \n",
     "    \n",
     "    len_final = len(df_cities)\n",
     "    \n",
@@ -205,11 +209,11 @@
     "\n",
     "    # Tidy up the names\n",
     "\n",
-    "    df_countries['tidy_name'] = df_countries['original_name'].apply(lambda x: unidecode(x)) # 4904 names are affected\n",
+    "    df_countries['simple_name'] = df_countries['original_name'].apply(lambda x: unidecode(x)) # 4904 names are affected\n",
     "\n",
     "    # Sort the cities so that the longer ones come first\n",
-    "    df_countries['tidy_len'] = df_countries['tidy_name'].apply(lambda x: len(x))\n",
-    "    df_countries.sort_values(by='tidy_len',ascending=False,inplace=True)\n",
+    "    df_countries['simple_len'] = df_countries['simple_name'].apply(lambda x: len(x))\n",
+    "    df_countries.sort_values(by='simple_len',ascending=False,inplace=True)\n",
     "    \n",
     "    return df_countries"
    ]
@@ -311,10 +315,11 @@
       "text/plain": [
        "original_name    4900\n",
        "geonameid        4900\n",
+       "population       4900\n",
        "latitude         4900\n",
        "longitude        4900\n",
        "countrycode      4900\n",
-       "tidy_name        4900\n",
+       "simple_name      4900\n",
        "tidy_len         4900\n",
        "dtype: int64"
       ]
@@ -326,7 +331,7 @@
    ],
    "source": [
     "df_cities = prepare_city_list()\n",
-    "(df_cities[df_cities['original_name'] != df_cities['tidy_name']]).count()  \n",
+    "(df_cities[df_cities['original_name'] != df_cities['simple_name']]).count()  \n",
     "# 4904 names were affected in the original list; now that I'm removing the tricky ones, the count may be lower"
    ]
   },
@@ -348,8 +353,8 @@
        "original_name    0\n",
        "geonameid        0\n",
        "countrycode      0\n",
-       "tidy_name        0\n",
-       "tidy_len         0\n",
+       "simple_name      0\n",
+       "simple_len       0\n",
        "dtype: int64"
       ]
      },
@@ -360,7 +365,7 @@
    ],
    "source": [
     "df_countries = prepare_country_list()\n",
-    "(df_countries[df_countries['original_name'] != df_countries['tidy_name']]).count()  # 0 names are affected"
+    "(df_countries[df_countries['original_name'] != df_countries['simple_name']]).count()  # 0 names are affected"
    ]
   },
   {
@@ -403,10 +408,11 @@
        "      <th></th>\n",
        "      <th>original_name</th>\n",
        "      <th>geonameid</th>\n",
+       "      <th>population</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>countrycode</th>\n",
-       "      <th>tidy_name</th>\n",
+       "      <th>simple_name</th>\n",
        "      <th>tidy_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -415,6 +421,7 @@
        "      <th>16758</th>\n",
        "      <td>Chak Two Hundred Forty-nine Thal Development A...</td>\n",
        "      <td>1179305</td>\n",
+       "      <td>18126</td>\n",
        "      <td>31.17772</td>\n",
        "      <td>71.20480</td>\n",
        "      <td>PK</td>\n",
@@ -425,6 +432,7 @@
        "      <th>15007</th>\n",
        "      <td>Dolores Hidalgo Cuna de la Independencia Nacional</td>\n",
        "      <td>4023117</td>\n",
+       "      <td>59240</td>\n",
        "      <td>21.15611</td>\n",
        "      <td>-100.93250</td>\n",
        "      <td>MX</td>\n",
@@ -435,6 +443,7 @@
        "      <th>15048</th>\n",
        "      <td>Ampliación San Mateo (Colonia Solidaridad)</td>\n",
        "      <td>8858118</td>\n",
+       "      <td>16250</td>\n",
        "      <td>19.61639</td>\n",
        "      <td>-99.14722</td>\n",
        "      <td>MX</td>\n",
@@ -445,6 +454,7 @@
        "      <th>15033</th>\n",
        "      <td>Licenciado Benito Juárez (Campo Gobierno)</td>\n",
        "      <td>8858101</td>\n",
+       "      <td>24185</td>\n",
        "      <td>24.65667</td>\n",
        "      <td>-107.54500</td>\n",
        "      <td>MX</td>\n",
@@ -455,6 +465,7 @@
        "      <th>6530</th>\n",
        "      <td>Sant Pere, Santa Caterina i La Ribera</td>\n",
        "      <td>3119123</td>\n",
+       "      <td>22856</td>\n",
        "      <td>41.38450</td>\n",
        "      <td>2.18152</td>\n",
        "      <td>ES</td>\n",
@@ -466,21 +477,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                                           original_name geonameid  latitude  \\\n",
-       "16758  Chak Two Hundred Forty-nine Thal Development A...   1179305  31.17772   \n",
-       "15007  Dolores Hidalgo Cuna de la Independencia Nacional   4023117  21.15611   \n",
-       "15048         Ampliación San Mateo (Colonia Solidaridad)   8858118  19.61639   \n",
-       "15033          Licenciado Benito Juárez (Campo Gobierno)   8858101  24.65667   \n",
-       "6530               Sant Pere, Santa Caterina i La Ribera   3119123  41.38450   \n",
+       "                                           original_name geonameid population  \\\n",
+       "16758  Chak Two Hundred Forty-nine Thal Development A...   1179305      18126   \n",
+       "15007  Dolores Hidalgo Cuna de la Independencia Nacional   4023117      59240   \n",
+       "15048         Ampliación San Mateo (Colonia Solidaridad)   8858118      16250   \n",
+       "15033          Licenciado Benito Juárez (Campo Gobierno)   8858101      24185   \n",
+       "6530               Sant Pere, Santa Caterina i La Ribera   3119123      22856   \n",
        "\n",
-       "       longitude countrycode  \\\n",
-       "16758   71.20480          PK   \n",
-       "15007 -100.93250          MX   \n",
-       "15048  -99.14722          MX   \n",
-       "15033 -107.54500          MX   \n",
-       "6530     2.18152          ES   \n",
+       "       latitude  longitude countrycode  \\\n",
+       "16758  31.17772   71.20480          PK   \n",
+       "15007  21.15611 -100.93250          MX   \n",
+       "15048  19.61639  -99.14722          MX   \n",
+       "15033  24.65667 -107.54500          MX   \n",
+       "6530   41.38450    2.18152          ES   \n",
        "\n",
-       "                                               tidy_name  tidy_len  \n",
+       "                                             simple_name  tidy_len  \n",
        "16758  Chak Two Hundred Forty-nine Thal Development A...        54  \n",
        "15007  Dolores Hidalgo Cuna de la Independencia Nacional        49  \n",
        "15048         Ampliacion San Mateo (Colonia Solidaridad)        42  \n",
@@ -526,8 +537,8 @@
        "      <th>original_name</th>\n",
        "      <th>geonameid</th>\n",
        "      <th>countrycode</th>\n",
-       "      <th>tidy_name</th>\n",
-       "      <th>tidy_len</th>\n",
+       "      <th>simple_name</th>\n",
+       "      <th>simple_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -583,12 +594,12 @@
        "95              Heard Island and McDonald Islands        HM          HM   \n",
        "237              Saint Vincent and the Grenadines        VC          VC   \n",
        "\n",
-       "                                        tidy_name  tidy_len  \n",
-       "89   South Georgia and the South Sandwich Islands        44  \n",
-       "232          United States Minor Outlying Islands        36  \n",
-       "29             Bonaire, Saint Eustatius and Saba         34  \n",
-       "95              Heard Island and McDonald Islands        33  \n",
-       "237              Saint Vincent and the Grenadines        32  "
+       "                                      simple_name  simple_len  \n",
+       "89   South Georgia and the South Sandwich Islands          44  \n",
+       "232          United States Minor Outlying Islands          36  \n",
+       "29             Bonaire, Saint Eustatius and Saba           34  \n",
+       "95              Heard Island and McDonald Islands          33  \n",
+       "237              Saint Vincent and the Grenadines          32  "
       ]
      },
      "execution_count": 13,
@@ -624,7 +635,7 @@
     "# hack_headlines -- every time a match is found, hack it out so a smaller substring can't match it later\n",
     "hack_headlines = headlines.copy()  # this will be butchered by the time we're done, so we can look at it to see what was missed\n",
     "\n",
-    "for c in df_cities['tidy_name']:\n",
+    "for c in df_cities['simple_name']:\n",
     "    df_out, hack_headlines = check_lines(c,clean_list = headlines, hack_list = hack_headlines, isCity = True)\n",
     "    \n",
     "    df_final = df_final.append(df_out,sort=False)  # sort=True changes the order of columns and is the default\n",
@@ -655,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c in df_countries['tidy_name']:\n",
+    "for c in df_countries['simple_name']:\n",
     "    df_out, hack_headlines = check_lines(c,clean_list = headlines, hack_list = hack_headlines, isCity = False)\n",
     "    \n",
     "    df_final = df_final.append(df_out,sort=False)"
@@ -1010,12 +1021,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#df_final"
+    "Write out the final table of parsed headlines so that it can be read in to start the next step."
    ]
   },
   {
