--- a/how-to/explore_UN_population_data.ipynb
+++ b/how-to/explore_UN_population_data.ipynb
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2913,13 +2913,15 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfa_2020 = dfa[dfa['Year'] == 2020]\n",
+    "dff_2020 = dff[dff['Year'] == 2020]\n",
+    "dfm_2020 = dfm[dfm['Year'] == 2020]\n",
     "dfa_2020.columns"
    ]
   },
@@ -3121,6 +3123,33 @@
    ],
    "source": [
     "plot_age_brackets('China')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfa_2020.to_csv('WorldPop_all_2020_estimate.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff_2020.to_csv('WorldPop_female_2020_estimate.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfm_2020.to_csv('WorldPop_male_2020_estimate.csv')"
    ]
   },
   {
