adjust parsing in preparation for 3rd phase

--- a/coursework/manning-data-science-bookcamp/jupyter_notebooks/s1_parse_headlines.ipynb
+++ b/coursework/manning-data-science-bookcamp/jupyter_notebooks/s1_parse_headlines.ipynb
@@ -935,6 +935,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "39 dropped cities seems like a lot! Let's check a few to see if they really aren't in the geonamescache database -- it could be that there is a bug in this program instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>original_name</th>\n",
+       "      <th>geonameid</th>\n",
+       "      <th>population</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>countrycode</th>\n",
+       "      <th>simple_name</th>\n",
+       "      <th>tidy_len</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [original_name, geonameid, population, latitude, longitude, countrycode, simple_name, tidy_len]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cities[df_cities['simple_name'] == 'Boston']  # confirming the correct format\n",
+    "df_cities[df_cities['simple_name'] == 'Davos']   # Seems strange; that's a famous city in Switzerland\n",
+    "gc.get_cities_by_name('Davos')\n",
+    "\n",
+    "# Davos is listed at geonames.org; it seems very odd that it wouldn't be in the geonamescace list, although it does \n",
+    "# appear that it has a population of only 11k and there may be many similarly named places.\n",
+    "# TODO: investigate this list further\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1029,11 +1116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv(\"parsed_headlines.csv\",index=False)"
+    "df_final.to_csv(\"s1_parsed_headlines.csv\",index=False)"
    ]
   },
   {
