--- a/coursework/manning-data-science-bookcamp/jupyter_notebooks/s2_headlines_add_lat_long.ipynb
+++ b/coursework/manning-data-science-bookcamp/jupyter_notebooks/s2_headlines_add_lat_long.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "# Headlines with cities are in this file:\n",
     "fname1= r\"C:\\Users\\jshaf\\GitHub\\data-science-portfolio\\coursework\"\n",
-    "fname2 = r\"\\manning-data-science-bookcamp\\jupyter_notebooks\\parsed_headlines.csv\"\n",
+    "fname2 = r\"\\manning-data-science-bookcamp\\jupyter_notebooks\\s1_parsed_headlines.csv\"\n",
     "fname = fname1 + fname2\n",
     "\n",
     "# First step when using geonamescache\n",
@@ -460,17 +460,17 @@
     {
      "data": {
       "text/plain": [
-       "['Zika reaches Johor Bahru, Malaysia',\n",
-       " 'Mystery Virus Spreads in Recife, Brazil',\n",
-       " 'Zika outbreak in Piracicaba, Brazil',\n",
-       " 'Zika surfaces in Klang, Malaysia',\n",
-       " 'Student sick in Campinas, Brazil',\n",
-       " 'New Zika Case in Kota Kinabalu, Malaysia',\n",
-       " 'Zika Patient in Seminole, Florida',\n",
-       " 'Spanish Flu Spreading through Madrid',\n",
+       "['Spanish Flu Spreading through Madrid',\n",
        " 'Spanish Flu Outbreak in Lisbon',\n",
        " 'Thailand-Zika Virus in Bangkok',\n",
-       " \"Zika cases in Vietnam's Ho Chi Minh City surge\"]"
+       " 'New Zika Case in Kota Kinabalu, Malaysia',\n",
+       " 'Student sick in Campinas, Brazil',\n",
+       " 'Zika surfaces in Klang, Malaysia',\n",
+       " 'Mystery Virus Spreads in Recife, Brazil',\n",
+       " 'Zika outbreak in Piracicaba, Brazil',\n",
+       " 'Zika reaches Johor Bahru, Malaysia',\n",
+       " \"Zika cases in Vietnam's Ho Chi Minh City surge\",\n",
+       " 'Zika Patient in Seminole, Florida']"
       ]
      },
      "execution_count": 10,
@@ -492,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Drop list is: [614, 617, 618, 612, 619, 613, 350, 526, 522, 615, 616]\n"
+      "Drop list is: [526, 522, 615, 613, 619, 612, 617, 618, 614, 616, 350]\n"
      ]
     }
    ],
@@ -1285,7 +1285,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29e0e2c1fc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2cf5defdd88>"
       ]
      },
      "execution_count": 28,
@@ -1534,7 +1534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('headlines_lat_long_cc.csv',index=False)"
+    "df.to_csv('s2_headlines_lat_long_cc.csv',index=False)"
    ]
   },
   {
